--- a/study/study-fastdfs/src/main/resources/bootstrap.yml
+++ b/study/study-fastdfs/src/main/resources/bootstrap.yml
@@ -12,7 +12,7 @@ spring:
         server-addr: 127.0.0.1:8848
         file-extension: yaml
         group: DEFAULT_GROUP
-        namespace: 39a155ed-5ce9-487c-ac50-3915c2d3e9a4
+#        namespace: 39a155ed-5ce9-487c-ac50-3915c2d3e9a4
         extension-configs[0]:
           data-id: test.yml
           group: DEFAULT_GROUP
